# mnhttn-cafe-bogoforge

./: .gitignore  Cargo.toml  README.md  build.rs  conf.toml.example
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs  metrics.rs  runtime.rs  scheduler.rs
src/compute/: cpu.rs  mod.rs
src/compute/amd/: kernel.hip  mod.rs
src/compute/cuda/: mod.rs
src/compute/gpu/: kernel.cu  mod.rs
src/compute/vk/: kernel.wgsl  mod.rs
src/net/: mod.rs  protocol.rs  types.rs
src/tui/: mod.rs
