[package]
name = "bogoforge"
version = "0.1.0"
edition = "2021"

[features]
default = []
cuda = ["dep:cust"]
hip  = []
vk   = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true


[dependencies]
# Async runtime + WebSocket
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
http = "1"

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TOML Config
toml = "1.1.2+spec-1.1.0"

# Error handling
anyhow = "1"

# CPU compute
orx-parallel = "3"

# TUI
ratatui = "0.28"
crossterm = "0.27"

# Host CPU/RAM stats for the performance view (GPU stats are sampled via nvidia-smi)
sysinfo = "0.31"

# Sync primitives
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Logging
log = "0.4"
fern = "0.6"
chrono = "0.4"

# CUDA bindings (optional; enable with --features cuda)
cust = { version = "0.3", optional = true }

# Vulkan / cross-GPU backend (optional; enable with --features vk)
wgpu     = { version = "22", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1",   optional = true, features = ["derive"] }

[build-dependencies]
# build.rs uses std::process::Command to invoke nvcc --ptx
